Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanInteger.quorum
integer i = 5
boolean b = i